--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/react-dom": "16.8.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "typesafe-actions": "^4.4.2",
     "typescript": "3.5.3"
   },
   "scripts": {
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint-config-airbnb": "^17.1.1",
